Add Virtualized Tables, Search and Adding Items

--- a/CSPortfolioWebApp/src/index.css
+++ b/CSPortfolioWebApp/src/index.css
@@ -110,3 +110,11 @@ All colors MUST be HSL.
     @apply bg-background text-foreground;
   }
 }
+
+.no-scrollbar {
+  -ms-overflow-style: none;      /* IE & Edge */
+  scrollbar-width: none;        /* Firefox */
+}
+.no-scrollbar::-webkit-scrollbar {
+  display: none;                /* Chrome, Safari */
+}
